# glioma_segmentation

./: README.md  pyproject.toml
src/: utils.py
src/configs/: brats.yaml  ensemble.yaml  survival_data.csv
src/dataloaders/: affine_trans.py  brats.py  brats_transformed.py  elastic_trans.py
src/models/: ensemble.py  loss.py  unet.py  unet_dropout.py  unet_without_dropout.py
src/notebooks/: count_iou.ipynb  ensemble.ipynb  model_aleatoric.ipynb  model_epistemic.ipynb  test.ipynb  training.ipynb
src/training_scripts/: brats.py  brats_aff_no_drop.py  brats_affine.py  brats_affine_dropout.py  brats_baseline.py  brats_dropout.py  brats_ela_no_drop.py  brats_elastic.py  brats_elastic_dropout.py  brats_save.py  brats_transform.py  ensemble2.py  ensemble_baseline.py  ensemble_dropout.py  folders.txt
src/training_scripts/wandb/: latest-run
