[tool.poetry]
name = "glioma-segmentation"
version = "0.1.0"
description = ""
authors = ["daria-yermakova <daria.yerm0710@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
numpy = "^1.26.4"
tqdm = "^4.66.2"
wandb = "^0.16.6"
matplotlib = "^3.8.4"
jupyter = "^1.0.0"
monai = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
